// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCommunities matches last snapshot 1`] = `
<div
  data-stylename="communities"
>
  <div
    data-stylename="row"
  >
    <span
      data-stylename="label"
    >
      Posted In: 
    </span>
    <LinkedCommunityNameList
      communities={
        Array [
          Object {
            "id": 1,
            "name": "One",
            "slug": "one",
          },
          Object {
            "id": 2,
            "name": "Two",
            "slug": "two",
          },
          Object {
            "id": 3,
            "name": "Three",
            "slug": "three",
          },
        ]
      }
      expandFunc={[Function]}
      maxShown={2}
    />
    <a
      data-stylename="expandLink"
      onClick={[Function]}
    >
      <Icon
        data-stylename="expandIcon"
        name="ArrowDown"
      />
    </a>
  </div>
</div>
`;

exports[`PostCommunities matches last snapshot when expanded 1`] = `
<div
  data-stylename="communities expanded"
  onClick={[Function]}
>
  <div
    data-stylename="row"
  >
    <span
      data-stylename="label"
    >
      Posted In: 
    </span>
    <a
      data-stylename="expandLink"
      onClick={[Function]}
    >
      <Icon
        data-stylename="expandIcon"
        name="ArrowUp"
      />
    </a>
  </div>
  <CommunitiesList
    communities={
      Array [
        Object {
          "id": 1,
          "name": "One",
          "slug": "one",
        },
        Object {
          "id": 2,
          "name": "Two",
          "slug": "two",
        },
        Object {
          "id": 3,
          "name": "Three",
          "slug": "three",
        },
      ]
    }
  />
</div>
`;

exports[`PostCommunities returns null when in the only community 1`] = `""`;
